# rust-sqlx

./: .env  Cargo.toml
migrations/: 20210622063024_user.sql
src/: lib.rs  main.rs  routes.rs  user_query.rs  user_query_as.rs
src/controllers/: user_controller.rs
src/models/: user.rs
