[package]
name = "rust-sqlx"
version = "0.1.0"
authors = ["Akitotameto <akito.tameto@blueish.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.5", features = [ "mysql", "runtime-tokio-native-tls" ] }
tokio = { version = "1.7.1", features = ["full"] }
anyhow = "1.0"